--- a/package.json
+++ b/package.json
@@ -50,8 +50,13 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "material-ui": "^0.20.0",
+    "mdbreact": "^4.2.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-dropzone": "^4.2.9",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
