--- a/package.json
+++ b/package.json
@@ -49,9 +49,14 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "dotenv": "^2.0.0",
+    "es2015": "0.0.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "web": "0.0.2",
+    "web3": "^1.0.0-beta.33"
   },
   "scripts": {
     "start": "node scripts/start.js",
