--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "es2015": "0.0.0",
     "web": "0.0.2",
     "web3": "^1.0.0-beta.33",
+    "jshashes": "^1.0.7",
     "material-ui": "^0.20.0",
     "mdbreact": "^4.2.0",
     "react": "^15.4.2",
