--- a/package.json
+++ b/package.json
@@ -53,15 +53,16 @@
     "babel-preset-stage-2": "^6.24.1",
     "dotenv": "^2.0.0",
     "es2015": "0.0.0",
-    "web": "0.0.2",
-    "web3": "^1.0.0-beta.33",
+    "jshashes": "^1.0.7",
     "material-ui": "^0.20.0",
     "mdbreact": "^4.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^4.2.9",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "web": "0.0.2",
+    "web3": "^1.0.0-beta.33"
   },
   "scripts": {
     "start": "node scripts/start.js",
