--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "devDependencies": {
     "autoprefixer": "6.5.1",
-    "babel-core": "6.17.0",
+    "babel-core": "^6.17.0",
     "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
-    "babel-loader": "6.2.7",
+    "babel-loader": "^6.2.7",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-app": "^2.0.1",
+    "babel-preset-stage-0": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
@@ -49,15 +52,16 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
+    "async": "^2.6.0",
     "babel-preset-stage-2": "^6.24.1",
     "dotenv": "^2.0.0",
     "es2015": "0.0.0",
-    "web": "0.0.2",
-    "web3": "^1.0.0-beta.33",
+    "fs": "0.0.1-security",
+    "ipfs": "^0.28.2",
     "jshashes": "^1.0.7",
     "material-ui": "^0.20.0",
     "mdbreact": "^4.2.0",
+    "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^4.2.9",
