--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "babel-preset-stage-2": "^6.24.1",
+    "bluebird": "^3.5.1",
     "dotenv": "^2.0.0",
     "es2015": "0.0.0",
     "fs": "0.0.1-security",
